--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -11,6 +11,7 @@ services:
   instance_size_slug: basic-xxs
   routes:
   - path: /
+    preserve_path_prefix: true
   health_check:
     http_path: /api/v1/health
   envs:
